# FSIL

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
lib/: CMakeLists.txt  FileEntry.cpp  FileEntry.h  FileEntryContainer.cpp  FileEntryContainer.h  FileScanner.cpp  FileScanner.h  FileScanner.tpp
test/: CMakeLists.txt  FileEntryContainerTest.cpp  FileEntryTest.cpp  FileScannerTest.cpp  TempFile.h
